--- a/.env
+++ b/.env
@@ -10,6 +10,7 @@ APP_SECRET=09d3d0e39c7fdc2e86cab0fa1f94b26d
 ###< symfony/framework-bundle ###
 
 MAILER_USER=ko.drko@gmail.com
+SENDER_USER=drko
 
 ###> symfony/swiftmailer-bundle ###
 # For Gmail as a transport, use: "gmail://username:password@localhost"
