--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -1,7 +1,7 @@
 framework:
     secret: '%env(APP_SECRET)%'
     #default_locale: en
-    #csrf_protection: ~
+    csrf_protection: ~
     #http_method_override: true
 
     # uncomment this entire section to enable sessions
@@ -23,4 +23,4 @@ fos_user:
     user_class: App\Entity\User
     from_email:
         address: '%env(MAILER_USER)%'
-        sender_name: '%env(MAILER_USER)%'
+        sender_name: '%env(SENDER_USER)%'
