--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -7,8 +7,8 @@ security:
     #     in_memory: { memory: ~ }
     providers:
         fos_userbundle:
-            id: fos_user.user_provider.username
-    
+            id: fos_user.user_provider.username_email
+
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
